--- a/Lesson06-Visualizer-Preferences/T06.07-Exercise-ListPreference/app/src/main/res/xml/pref_visualizer.xml
+++ b/Lesson06-Visualizer-Preferences/T06.07-Exercise-ListPreference/app/src/main/res/xml/pref_visualizer.xml
@@ -23,6 +23,12 @@
         android:summaryOn="@string/pref_show_true"
         android:title="@string/pref_show_treble_label" />
 
-    <!-- TODO (1) Add a list preference -->
+    <!-- COMPLETED (1) Add a list preference -->
+    <ListPreference
+        android:defaultValue="@string/pref_color_green_value"
+        android:key="@string/pref_show_color_key"
+        android:title="@string/pref_show_color_label"
+        android:entries="@array/show_color_entry_label"
+        android:entryValues="@array/show_color_entry_values"/>
 
 </PreferenceScreen>
